# LatAnalyze

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Readme.md  acinclude.m4  bootstrap.sh  build.sh  configure.ac  eigen-3.3.8.tar.bz2  latan-config.in  update_eigen.sh
.github/workflows/: build-macos.yml  build-ubuntu.yml
LatAnalyze3.xcodeproj/: project.pbxproj
ci-scripts/: install-deps.sh  install-gsl.sh  install-hdf5.sh  install-latan.sh  install-latcore.sh  install-minuit.sh  install-nlopt.sh
examples/: CMakeLists.txt  Makefile.am  exCompiledDoubleFunction.cpp  exDWT.cpp  exDerivative.cpp  exFit.cpp  exFitSample.cpp  exIntegrator.cpp  exInterp.cpp  exMat.cpp  exMathCompiler.cpp  exMathInterpreter.cpp  exMin.cpp  exPValue.cpp  exPlot.cpp  exRand.cpp  exRootFinder.cpp  exThreadPool.cpp  exVarBenchmark.cpp  ex_test.cpp
latan/: AsciiFile.cpp  AsciiFile.hpp  AsciiLexer.lpp  AsciiParser.ypp  Chi2Function.cpp  Chi2Function.hpp  CompiledFunction.cpp  CompiledFunction.hpp  CompiledModel.cpp  CompiledModel.hpp  Dataset.hpp  Exceptions.cpp  Exceptions.hpp  File.cpp  File.hpp  FitInterface.cpp  FitInterface.hpp  Function.cpp  Function.hpp  Global.cpp  Global.h  Global.hpp  IO.cpp  IO.h  IO.hpp  IOASCIILexer.lpp  IOASCIIParser.ypp  IOObject.cpp  IOObject.hpp  Io.cpp  Io.hpp  IoAsciiLexer.lpp  IoAsciiParser.ypp  IoObject.hpp  Makefile.am  Mat.cpp  Mat.hpp  MatSample.cpp  MatSample.hpp  Math.cpp  (+28 more)
lib/: AsciiFile.cpp  AsciiFile.hpp  AsciiLexer.lpp  AsciiParser.ypp  CMakeLists.txt  Chi2Function.cpp  Chi2Function.hpp  CompiledFunction.cpp  CompiledFunction.hpp  CompiledModel.cpp  CompiledModel.hpp  Config.cmake.in  Dataset.hpp  Derivative.cpp  Derivative.hpp  Exceptions.cpp  Exceptions.hpp  FFT.hpp  File.cpp  File.hpp  FitInterface.cpp  FitInterface.hpp  FitInterface.old.cpp  FitInterface.old.hpp  Function.cpp  Function.hpp  Global.cpp  Global.hpp  GslFFT.cpp  GslFFT.hpp  GslHybridRootFinder.cpp  GslHybridRootFinder.hpp  GslMinimizer.cpp  GslMinimizer.hpp  GslQagsIntegrator.cpp  GslQagsIntegrator.hpp  Hdf5File.cpp  Hdf5File.hpp  Histogram.cpp  Histogram.hpp  (+48 more)
lib/Core/: Eigen.hpp  EigenPlugin.hpp  Exceptions.cpp  Exceptions.hpp  Mat.cpp  Mat.hpp  Math.cpp  Math.hpp  MathInterpreter.cpp  MathInterpreter.hpp  MathLexer.lpp  MathParser.ypp  OptParser.cpp  Plot.cpp  Plot.hpp  ThreadPool.cpp  ThreadPool.hpp  Utilities.cpp  Utilities.hpp  stdincludes.hpp
lib/Functional/: CompiledFunction.cpp  CompiledFunction.hpp  CompiledModel.cpp  CompiledModel.hpp  Function.cpp  Function.hpp  Model.cpp  Model.hpp  TabFunction.cpp  TabFunction.hpp
lib/Io/: AsciiFile.cpp  AsciiFile.hpp  AsciiLexer.lpp  AsciiParser.ypp  BinReader.cpp  File.cpp  File.hpp  Hdf5File.cpp  Hdf5File.hpp  Io.cpp  Io.hpp  IoObject.hpp  XmlReader.cpp  XmlReader.hpp
lib/Io/Xml/: tinyxml2.cpp
lib/LatAnalyze/: Global.cpp  Global.hpp
lib/LatAnalyze/Core/: Eigen.hpp  EigenPlugin.hpp  Exceptions.cpp  Mat.cpp  Math.cpp  Math.hpp  MathInterpreter.cpp  MathLexer.lpp  MathParser.ypp  OptParser.cpp  OptParser.hpp  ParserState.hpp  Plot.cpp  Utilities.hpp
lib/LatAnalyze/Functional/: CompiledFunction.hpp  Model.cpp
lib/LatAnalyze/Io/: AsciiLexer.lpp  AsciiParser.ypp  BinReader.hpp  File.hpp  Hdf5File.hpp  XmlReader.cpp  XmlReader.hpp
lib/LatAnalyze/Numerical/: CompositeMinimizer.cpp  CompositeMinimizer.hpp  DWT.cpp  DWT.hpp  Derivative.hpp  GslFFT.hpp  GslQagsIntegrator.hpp  Minimizer.cpp  MinuitMinimizer.cpp  MinuitMinimizer.hpp  NloptMinimizer.cpp  Solver.cpp  Solver.hpp
lib/LatAnalyze/Physics/: CorrelatorFitter.cpp  DataFilter.hpp  EffectiveMass.cpp
lib/LatAnalyze/Statistics/: Dataset.hpp  Histogram.cpp  MatSample.hpp  StatArray.cpp  StatArray.hpp  XYSampleData.cpp  XYSampleData.hpp  XYStatData.cpp
lib/Numerical/: DWT.cpp  DWT.hpp  DWTFilters.cpp  DWTFilters.hpp  Derivative.cpp  Derivative.hpp  FFT.hpp  GslFFT.cpp  GslFFT.hpp  GslHybridRootFinder.cpp  GslHybridRootFinder.hpp  GslMinimizer.cpp  GslMinimizer.hpp  GslQagsIntegrator.cpp  GslQagsIntegrator.hpp  Integrator.hpp  Minimizer.cpp  Minimizer.hpp  MinuitMinimizer.cpp  MinuitMinimizer.hpp  NloptMinimizer.cpp  NloptMinimizer.hpp  RootFinder.cpp  RootFinder.hpp  Solver.cpp  Solver.hpp
lib/Physics/: CorrelatorFitter.cpp  CorrelatorFitter.hpp  DataFilter.cpp  DataFilter.hpp  EffectiveMass.cpp  EffectiveMass.hpp
lib/Statistics/: Dataset.hpp  FitInterface.cpp  FitInterface.hpp  Histogram.cpp  Histogram.hpp  MatSample.hpp  Random.cpp  Random.hpp  StatArray.cpp  StatArray.hpp  XYSampleData.cpp  XYSampleData.hpp  XYStatData.cpp  XYStatData.hpp
physics/: 2pt-effmass.cpp  2pt-fit.cpp  CMakeLists.txt  Makefile.am  eff-mass.cpp  fit-2pt.cpp  fit-phys-env.cpp  fit-phys-env.hpp  fit-phys.cpp  pert-eff-mass.cpp
utils/: CMakeLists.txt  Makefile.am  create_rg_state.cpp  latan  make_fake_sample.cpp  plot.cpp  resample.cpp  sample-combine.cpp  sample-dwt.cpp  sample-element.cpp  sample-fake.cpp  sample-ft.cpp  sample-merge.cpp  sample-noise-analysis.cpp  sample-plot-corr.cpp  sample-plot.cpp  sample-read.cpp  sample_combine.cpp  sample_flatten.cpp  sample_plot_corr.cpp  sample_read.cpp
